# fmms-kernel

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  fused_mm_sample.py  modal-example.py  profile-mem.py  pyproject.toml  speed_test.py  verify-fused-impl.ipynb  ws.code-workspace
benchmarking/: Makefile  dump_ttgir.sh  hbm-access.py  insert_proton_records.py  matmul_comparison.py  parse_ncu_sweep.py  parse_proton_intrakernel.py  plot-triton-bench.ipynb  plot-triton-bench.py  plot_bsz_sweep_runtime.py  plot_ncu_kernel_breakdown.py  plot_styles.py  plot_tl_benchmark.py  profile-mem.py  proton_profile.py  runtime-comp.ipynb  speed_test.py  triton_benchmark.py  verify-fused-impl.ipynb
benchmarking/data/: kernel-breakdown.csv
benchmarking/vllm/: Makefile  README.md  bench-params.json  collect_results.py  judge_eval.py  plot_tpot.py
docs/: README-backup.md  brev-environment.md  helion-pitfalls.md  modal-benchmarking.md  profiling.md  triton-tma-pitfalls.md  vllm-integration.md
examples/: basic_usage.py
findings/: arithmetic-intensity-decode-matmul.md  cutlass-fmms-kernel.md  fused-top-k-top-p-feasibility.md  helion-barrier-single-kernel.md  lm-head-configurations.md  ncu-speedup-analysis.md  proton-scopes-persistent-kernel.md  register-spilling-bsz256.md  tma-cache-modifiers.md  torch-compile-overhead-tp2.md  tp2-collective-overhead.md  vllm-integration.md
findings/vllm-bench-results/: Makefile  README.md
imgs/: baseline-vs-fmms-diagram.drawio
scripts/: brev-bootstrap.sh
src/fused_mm_sampling/: __init__.py  alg_names.py  core.py  cutlass_impl.py  helion_impl.py  kraken_reduce.py  persistent_matmul.py  qitra.py  testing.py  tl_argsort.py  tl_matmul.py  tp_info.py
tests/: generate_inputs.py  test_core.py  test_matmul.py
(+17 files in other folders)
